[tool.poetry]
name = "langchain-monorepo"
version = "0.0.1"
description = "LangChain mono-repo"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/langchain-ai/langchain"

python = ">=3.8.1,<4.0"
langchain = { path = "libs/langchain/", develop = true }
langchain-experimental = ">=3.8.1,<4.0"
langchainhub = ">=3.8.1,<4.0"
langchain-core = ">=3.8.1,<4.0"

