[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "gpt-engineer"
version = "0.1.0"
description = "Specify what you want it to build, the AI asks for clarification, and then builds it."
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
  'black == 23.3.0',
  'click >= 8.0.0',
  'mypy == 1.3.0',
  'openai == 0.27.8',
  'pre-commit == 3.3.3',
  'pytest == 7.3.1',
  'ruff == 0.0.272',
  'termcolor==2.3.0',
  'typer >= 0.3.2',
  'rudder-sdk-python == 2.0.2',
  'dataclasses-json == 0.5.7',
  'tiktoken >=0.0.4',
  'tabulate == 0.9.0',
  'python-dotenv >= 0.21.0',
  'langchain >=0.0.240, <=0.0.312', # The upper bound is to address AiMessageChunk problem in bug report 802 and 804 on GH. If we want/need to relax this in the future, we should check that the AiMessageChunk error has been resolved.
  'agent-protocol==1.0.1',
  'llama-index >= 0.8.49',
  'rank-bm25 >= 0.2.2',
  'tree_sitter_languages >= 1.8.0'
]
