[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "gpt-engineer"
version = "0.1.0"
description = "Specify what you want it to build, the AI asks for clarification, and then builds it."
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
  'ollama-cli == 23.3.0',
  'ollama >= 8.0.0'
]
